--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ targetCompatibility = 1.8
 
 // 依存を取得する場合のリポジトリ
 repositories {
-  maven { url CENTRAL_REPOSITORY }
+  jcenter()
 }
 
 // 公開設定
@@ -29,8 +29,8 @@ publishing {
   publications {
     target(MavenPublication) {
       groupId  'com.cm55'
-      artifactId 'depDepend'
-      version '0.1'    
+      artifactId 'depDetect'
+      version '1.0'    
       from components.java   
       artifact sourceJar
     }
